tests/fail/10_invalid_expr_stmt.lang
// ОЖИДАЕТСЯ ОШИБКА: инструкция-выражение может быть только вызовом функции
функция Начало() : целое {
    1 + 1;
    вернуть 0;
}
